--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoulKeeper™ Cloud - Lazarus NeuroSystems</title>
+    <link rel="icon" type="image/png" href="assets/img/lazarus-logo.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Audio Element -->
-    <audio id="bgm" loop>
+    <!-- Audio Element with Autoplay -->
+    <audio id="bgm" loop autoplay>
         <source src="assets/sound/Hopes and Dreams.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
