--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="cyber-frame">
         <div class="terminal">
             <header class="header glitched">
-                <img src="assets/img/lazarus-logo.png" alt="Lazarus NeuroSystems" class="site-logo">
+                <img src="assets/img/lazarus-logo.png" alt="Lazarus NeuroSystems" 
+     class="site-logo" id="main-logo">
                 <h1 class="title">SOULKEEPER™ CLOUD v3.1.7</h1>
             </header>
 
